--- a/workshops.html
+++ b/workshops.html
@@ -29,7 +29,7 @@
   <header class="site-header">
     <div class="wrap" style="align-items:center;display:flex;justify-content:space-between;">
       <a class="logo" href="index.html"><img src="logo.png" alt="STATUP" class="logo-img" onerror="this.style.display='none'"><div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis, Elevate your decision.</small></div></a>
-      <nav class="main-nav"><a href="index.html">Home</a> · <a href="services.html">Services</a> · <a href="workshops.html">Materials</a> · <a href="register.html">Register</a></nav>
+      <nav class="main-nav"><a href="index.html">Home</a> · <a href="services.html">Services</a> · <a href="register.html">Register</a></nav>
     </div>
   </header>
 
