--- a/workshops.html
+++ b/workshops.html
@@ -173,10 +173,9 @@
         <h4 style="margin-top:0;">Materials (provided)</h4>
         <p class="muted" style="margin-bottom:8px;">All materials (datasets, slides, syntax & exercises) will be made available here before or during the workshop.</p>
         <ul class="muted" style="line-height:1.6;margin-left:1em;">
-          <li><a href="files/ws2-notes.pdf" target="_blank" rel="noopener">Workshop notes (PDF)</a></li>
-          <li><a href="files/ws2-dataset.sav" target="_blank" rel="noopener">Example dataset (.sav)</a></li>
-          <li><a href="files/ws2-syntax.sps" target="_blank" rel="noopener">SPSS syntax files (.sps)</a></li>
-          <li><a href="files/ws2-exercises.pdf" target="_blank" rel="noopener">Practice exercises (PDF)</a></li>
+          <li><a href="https://docs.google.com/document/d/1y2VR1UmUHyIn4nFyDw2WTiVbqLZ5FAbK7DFMeMdQ9wI/edit?usp=sharing" target="_blank" rel="noopener">Example dataset (.sav)</a></li>
+          <li><a href="https://docs.google.com/document/d/1y2VR1UmUHyIn4nFyDw2WTiVbqLZ5FAbK7DFMeMdQ9wI/edit?usp=sharing"_blank" rel="noopener">SPSS syntax files (.sps)</a></li>
+          <li><a href="https://docs.google.com/document/d/1y2VR1UmUHyIn4nFyDw2WTiVbqLZ5FAbK7DFMeMdQ9wI/edit?usp=sharing" target="_blank" rel="noopener">Practice exercises </a></li>
         </ul>
       </div>
 
